Display the maximum chart price to the user
In the right column, the price is displayed at the top.
It shifts as the user adjusts the price.

--- a/cryptopricepredicter/src/MainContent/MainContent.css
+++ b/cryptopricepredicter/src/MainContent/MainContent.css
@@ -3,6 +3,15 @@
 }
 
 .Main-Content__price-chart {
-  width: 100%;
+  display: inline-block;
+  width: 90%;
   height: 100%;
+}
+
+.Main-Content__side-price {
+  display: inline-block;
+  vertical-align: top;
+  width: 10%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
 }
