--- a/cryptopricepredicter/src/MainContent/MainContent.css
+++ b/cryptopricepredicter/src/MainContent/MainContent.css
@@ -15,3 +15,13 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.1);
 }
+
+.side-price__price-bubble {
+  position: relative;
+  top: 0px;
+  padding: 2px;
+  border-radius: 50px 0px 0px 50px;
+  text-align: center;
+  background-color: white;
+  color: black;
+}
