--- a/cryptopricepredicter/src/App.scss
+++ b/cryptopricepredicter/src/App.scss
@@ -17,7 +17,7 @@
   grid-area: navbar;
 }
 
-.Sidebar {
+.Settings {
   grid-area: sidebar;
 }
 
@@ -55,7 +55,7 @@
       ;
   }
 
-  .Sidebar {
+  .Settings {
     display: none;
   }
 
