Implement zooming in timeframe
For zooming in on the time, the user can drag in the timeframe
component to adjust the visible time scale.

--- a/cryptopricepredicter/src/MainContent/MainContent.scss
+++ b/cryptopricepredicter/src/MainContent/MainContent.scss
@@ -20,6 +20,12 @@
     height: 10%;
     width: 100%;
     display: inline-block;
+
+    &-item {
+      user-select: none;
+      -webkit-user-select: none;
+      -webkit-touch-callout: none;
+    }
   }
 }
 
