--- a/cryptopricepredicter/src/MainContent/MainContent.scss
+++ b/cryptopricepredicter/src/MainContent/MainContent.scss
@@ -37,4 +37,7 @@
   text-align: center;
   background-color: white;
   color: black;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
