--- a/cryptopricepredicter/src/Settings/SettingsView.scss
+++ b/cryptopricepredicter/src/Settings/SettingsView.scss
@@ -1,6 +1,8 @@
+@import "../variables.scss";
+
 .Settings {
-  background-color: blue;
-  color: white;
+  background-color: $dark-gray;
+  color: $white;
   padding: 10px;
 
 
